# esp32_driver

./: CMakeLists.txt
hl_ble/: CMakeLists.txt  hl_ble.c  hl_ble.h  hl_ble_gap.c  hl_ble_gap.h  hl_ble_gatt.c  hl_ble_gatt.h
hl_gpio/: hl_gpio.c  hl_gpio.h
hl_i2c/: hl_i2c.c  hl_i2c.h  hl_simulate_i2c.c  hl_simulate_i2c.h
hl_nvs/: CMakeLists.txt  hl_nvs.c  hl_nvs.h
hl_spi/: hl_spi.c  hl_spi.h
hl_uart/: hl_uart.c  hl_uart.h
